--- a/JS/aula13.html
+++ b/JS/aula13.html
@@ -18,7 +18,7 @@
     document.body.innerHTML += `As ultimas 3 letras do seu nome sao: ${nome.slice(-3)} <br />`;
     document.body.innerHTML += `As palavras do seu nome sao: ${nome.split(' ')} <br />`;  // split transforma o nome em array espaco duplo
     document.body.innerHTML += `Seu nome com letras maiusculas:${nome.toUpperCase()} <br />`;
-    document.body.innerHTML += `Seu nome com letras minusculas: ${nome.toLowerCase()} <br />`;
+    document.body.innerHTML += `Seu nome EDITANDO TESTE com letras minusculas: ${nome.toLowerCase()} <br />`;
         
     </script>
 
