atualizacao_teste_nova_branch

--- a/JS/aula13.html
+++ b/JS/aula13.html
@@ -9,16 +9,7 @@
 <body>
     <script>
 
-    const nome = prompt('Digite seu nome completo : '); 
-    document.body.innerHTML = `O seu nome e: <strong>${nome}<strong> <br />`;
-    document.body.innerHTML += `Seu nome tem ${nome.length} letras <br />`;
-    document.body.innerHTML += `A segunda letra do seu nome e: ${nome[1]} <br />`;
-    document.body.innerHTML += `Qual o primeiro indice da letra 'e' no seu nome? R: ${nome.indexOf('e')} <br />`;
-    document.body.innerHTML += `Qual o ultimo indice da letra 'e' no seu nome? R: ${nome.lastIndexOf('e')} <br />`;
-    document.body.innerHTML += `As ultimas 3 letras do seu nome sao: ${nome.slice(-3)} <br />`;
-    document.body.innerHTML += `As palavras do seu nome sao: ${nome.split(' ')} <br />`;  // split transforma o nome em array espaco duplo
-    document.body.innerHTML += `Seu nome com letras maiusculas:${nome.toUpperCase()} <br />`;
-    document.body.innerHTML += `Seu nome EDITANDO TESTE com letras minusculas: ${nome.toLowerCase()} <br />`;
+    <h2> Atualizacao da nova branch = teste de versionamento (feature2.0(teste_Git)) </h2>
         
     </script>
 
